Modificamos estilo en css sacandolo de html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="card" style="width: 18rem;" align="center">
             <img id="imagenDigimon" src="assets/img/fon2.jpeg" alt="...">
             <div class="card-body">
-              <h1 style="color: chocolate;" class="card-title">Digimon</h1>
+              <h1 class="card-title">Digimon</h1>
               <p class="card-text"id="nombreDigimon"><span>Nombre: </span> </p>
               <p class="card-text"id="nivelDigimon"><span>Nivel: </span></p>
               
