Creacion en gh page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <br><br><br>
 <footer id="mi_footer">
   <div class="organizacion_footer"></div>
-  <B><div class="organizacion_footer"><p id="el_texto_reservado">TODOS LOS DERECHOS RESERVADOS &#174</p> <!--&#174 codigo acci--> </div></B>    
+  <B><div class="organizacion_footer"><p id="el_texto_reservado">TODOS LOS DERECHOS RESERVADOS &#174 REALIZA JU</p> <!--&#174 codigo acci--> </div></B>    
   <div class="organizacion_footer"></div> 
 </footer>
 </html>
