Mejoras de diseño

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </a>
             <form class="d-flex" role="search">
               <label for="nombreProporcionado"></label>
-            <input class="form-control me-2" type="search" type="text" value="" id="nombreProporcionado" aria-label="Search">
+            <input class="form-control me-2" type="search" type="text" value="Ingresa nombre de un Digimon" id="nombreProporcionado" aria-label="Search">
           <input id="consumo" type="button" value="Buscar Digimon" onclick="consumoDigiApi()">
         </form>
       </div>
@@ -27,7 +27,7 @@
     <!--COMIENZA CARD-->
     <div class="container-fluid" align="center" id="divContainer">
         <h1 id="titulo" align="center">Consumiendo Digimon Api</h1>
-        <div class="card" style="width: 18rem;" align="center">
+        <div class="card" style="width: 50%;" align="center">
             <img id="imagenDigimon" src="assets/img/fon2.jpeg" alt="...">
             <div class="card-body">
               <h1 class="card-title">Digimon</h1>
