--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <script src="assets/js/prueba.js"></script>
 </body>
 <br><br><br>
-<footer id="mi_footer">
+<footer id="mi_footer" class="footer">
   <div class="organizacion_footer"></div>
   <B><div class="organizacion_footer"><p id="el_texto_reservado">TODOS LOS DERECHOS RESERVADOS &#174 REALIZA JU</p> <!--&#174 codigo acci--> </div></B>    
   <div class="organizacion_footer"></div> 
