Agregamos funcion placeHolder

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </a>
             <form class="d-flex" role="search">
               <label for="nombreProporcionado"></label>
-            <input class="form-control me-2" type="search" type="text" value="Nombre de un Digimon" id="nombreProporcionado" aria-label="Search">
+            <input class="form-control me-2" type="search" type="text" value="" placeholder="Nombre del Digimon" id="nombreProporcionado" aria-label="Search">
           <input id="consumo" type="button" value="Buscar Digimon" onclick="consumoDigiApi()">
         </form>
       </div>
