--- a/index.html
+++ b/index.html
@@ -11,22 +11,36 @@
 </head>
 <body>
   <!--COMIENZA NAV-->
-    <nav class="navbar bg-body-tertiary">
-        <div class="container-fluid" >
-            <a class="navbar-brand" href="#">
-                <img src="assets/img/images.jpeg" alt="" width="120" height="90">
-            </a>
-            <form class="d-flex" role="search">
-              <label for="nombreProporcionado"></label>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <img src="assets/img/images.jpeg" alt="" width="120" height="90">
+               
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"id="botonBarra" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">INICIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="listadoDigimon.html">LISTADO DIGIMON</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="historia.html">HISTORIA</a>
+            </li>            
+          </ul>
+          <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" type="text" value="" placeholder="Nombre del Digimon" id="nombreProporcionado" aria-label="Search">
-          <input id="consumo" type="button" value="Buscar Digimon" onclick="consumoDigiApi()">
-        </form>
+            <input id="consumo" type="button" value="Buscar Digimon" onclick="consumoDigiApi()">
+          </form>
+        </div>
       </div>
     </nav>
     <!--FIN NAV-->
     <!--COMIENZA CARD-->
-    <div class="container-fluid" align="center" id="divContainer">
-        <h1 id="titulo" align="center">Consumiendo Digimon Api</h1>
+     <div class="container-fluid" align="center" id="divContainer">
+        <h1 id="titulo" align="center">¿QUIERES CONOCER UN DIGIMON?</h1>
         <div class="card" style="width: 50%;" align="center">
             <img id="imagenDigimon" src="assets/img/fon2.jpeg" alt="...">
             <div class="card-body">
@@ -38,6 +52,8 @@
             
           </div>  
 </div>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
     <script src="assets/js/prueba.js"></script>
 </body>
 <br><br><br>
